--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "support-for",
   "version": "1.0.0-beta.1",
-  "description": "A module for Sass module developers to ease conditional browser support.",
+  "description": "Allows Sass authors to conditionally add support for specific browser versions.",
   "homepage": "https://github.com/JohnAlbin/support-for",
   "bugs": {
     "url": "https://github.com/JohnAlbin/support-for/issues"
