--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "support-for",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0",
   "description": "Allows Sass authors to conditionally add support for specific browser versions.",
   "homepage": "https://github.com/JohnAlbin/support-for",
   "bugs": {
