--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 # Configuration options are documented at:
 # http://docs.travis-ci.com/user/languages/javascript-with-nodejs/
+sudo: false
 language: node_js
 node_js:
-  - '0.10'
   - '0.12'
   - '4'
   - '5'
