--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "chai": "^3.4.1",
     "eslint": "^1.9.0",
+    "eyeglass": "^0.7.0",
     "mocha": "^2.3.4",
     "sassy-test": "^3.0.3"
   }
