--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   ],
   "main": "sass/_support-for.scss",
   "eyeglass": {
-    "exports": "eyeglass-exports.js",
+    "sassDir": "sass",
+    "exports": false,
     "needs": "*"
   },
   "scripts": {
@@ -31,9 +32,8 @@
   "devDependencies": {
     "chai": "^3.4.1",
     "eslint": "^2.6.0",
-    "eyeglass": "^0.7.0",
+    "eyeglass": "^0.8.3",
     "mocha": "^2.3.4",
-    "node-sass": "^3.4.2",
     "sassy-test": "^3.0.3"
   }
 }
